[package]
name = "ray"
version = "0.1.0"
readme = "README.md"
documentation = ""
repository = ""
homepage = ""
license = "MIT/Apache-2.0"
authors = [
	"John Moses <john.moses445@gmail.com>",
	"Nick Walker <nick@nickwalker.us>",
]

description = """
Modest attempt at creating a ray tracer in rust
"""

[dependencies]
cgmath = "0.15"
image = "0.15"
regex = "0.2"
lazy_static = "0.2"